style.css
/* ... */
.dropdown-header {
    cursor: pointer;

    >iconify-icon {
        margin-right: 5px;
        transform: translateY(2px);
    }
}

.dropdown-content {
    height: auto;
    overflow-y: hidden;
    transition: 500ms;

    &.hidden {
        height: 0;
    }
}

#mouse-shapes {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    user-select: none;
    pointer-events: none;
    z-index: 4;

    >div {
        display: inline-block;
    }

    >div>img {
        position: absolute;
        opacity: 0;
        transform: scale(0.5);
        /* IE, only works on <img> tags */
        -ms-interpolation-mode: nearest-neighbor;
        /* Firefox */
        image-rendering: crisp-edges;
        /* Chromium + Safari */
        image-rendering: pixelated;
    }
}

/* Border */
#border {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    border: 10px var(--colour-background) solid;
    user-select: none;
    pointer-events: none;
    z-index: 3;
}

.img-preview {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #00000050;
    backdrop-filter: blur(1px);
    z-index: 3;
}

.img-preview>img {
    max-width: 85vw;
    max-height: 90vh;
    border: 8px solid #ffffff;
    border-radius: 5px;
    cursor: pointer;
}

/* body {
    & header {
        background-color: var(--colour-background);
        border-bottom: 1px var(--colour-text) solid;
    }

    & footer {
        position: fixed;
        bottom: 0;
        background-color: var(--colour-background);
        border-top: 1px var(--colour-text) solid;
    }

    & #border {
        box-shadow: inset 1px 1px 0 var(--colour-text), inset -1px -1px 0 var(--colour-text);
    }
} */

/* Keyframes */
@keyframes scroll {
    from {
        transform: translateX(0);
    }

    to {
        transform: translateX(-50%);
    }
}

@keyframes slide_right_projects_preview {
    from {
        transform: translateX(-100px);
        opacity: 0;
    }

    to {
        transform: translateX(-33%);
        opacity: 1;
    }
}

@keyframes appear-up {
    from {
        transform: translateY(20px);
        opacity: 0;
    }

    to {
        transform: translateY(0);
        opacity: 1;
    }
}

/* Targets tablets in landscape mode */
@media only screen and (max-width: 1024px) {

    header>nav,
    footer>div {
        padding: 20px 30px;
    }

    header>nav {
        background-color: var(--colour-background);
    }

    #projects-preview {
        position: relative;
        height: auto;
        width: 100%;
        margin-left: 50px;
        margin-right: 50px;
        margin-bottom: 0;

        >div {
            position: relative;
            flex-wrap: wrap;
            row-gap: 60px;
            column-gap: 20px;
            height: auto;
            width: 100%;

            >a {
                width: calc(50% - 20px);

                &:hover:has(>div)>img {
                    opacity: 1;
                    pointer-events: all;
                }

                >img {
                    height: auto;
                    width: 100%;
                }

                >div {
                    position: relative;
                    border: none;
                }
            }
        }
    }
}

/* Targets tablets in portrait mode */
@media only screen and (max-width: 768px) {
    header>nav>ul {
        gap: 10px;
    }

    #projects-preview {
        >div>a {
            width: 100%;
        }

        >div>a>div>p {
            display: -webkit-box;
            -webkit-box-orient: vertical;
            -webkit-line-clamp: 2;
            line-clamp: 2;
            text-overflow: ellipsis;
            overflow: hidden;
        }
    }
}

/* Targets mobile devices in landscape mode */
@media only screen and (max-width: 600px) {
    #projects-preview>div>a>div {
        padding: 10px;
        padding-top: 20px;
    }
}

/* Targets mobile devices in portrait mode */
@media only screen and (max-width: 480px) {
    footer>div {
        flex-direction: column;
        gap: 20px;
    }

    .img-grid {

        &.col-2,
        &.col-3 {
            grid-template-columns: 1fr;

            >figcaption {
                grid-column: auto;
            }
        }

        &.span-3,
        &.span-5,
        &.span-7 {
            grid-template-columns: 1fr;

            >img {
                grid-column: 1;
            }
        }
    }

    .img-flex {

        &.keep-aspect {
            flex-wrap: wrap;
        }

        &:has(>figcaption) {
            &.col-4>img {
                width: 100%;
            }

            &.col-5>img {
                width: 100%;
            }
        }
    }
}

